[package]
name = "read_for_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.0"
serde_derive = "1.0.145"
serde = "1.0.145"
glob = "0.3.0"
audiotags = "0.4.1"
rodio = "0.16.0"
alsa = "0.6.0"
