[package]
name = "read_for_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.0"
serde_derive = "1.0.145"
serde = "1.0.145"
glob = "0.3.0"
audiotags = "0.4.1"
rodio = "0.16.0"
alsa = "0.6.0"
shellexpand = "2.1.2"
symphonia = { version = "0.5.1", features = ["mp3", "aac", "alac", "isomp4"] }
log = "0.4.17"
lazy_static = "1.4.0"
libpulse-simple-binding = "2.25.0"
libpulse-binding = "2.26.0"
